add pigeon css small screen

--- a/r-simple-starter/css/style.css
+++ b/r-simple-starter/css/style.css
@@ -370,6 +370,60 @@ ul {
         margin-bottom: 0;
     }
 }
+/* pigeon */
+.pigeon-container{
+    display: grid;
+    gap: 2rem 1rem;
+}
+.tags-container{
+    order: 1;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 3rem;
+}
+.tags-container h4{
+    margin-bottom: 0.5rem;
+    font-weight: 500;
+}
+.tags-list{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.tags-list a{
+    display: block;
+    text-transform: capitalize;
+    color: var(--grey-500);
+    transition: var(--transition);
+}
+.tags-list a:hover{
+    color:  var(--primary-500);
+}
+.pigeon-list{
+    display: grid;
+    gap: 2rem 1rem;
+    padding-bottom: 3rem;
+}
+.pigeon{
+    display: block;
+}
+.pigeon img{
+    height: 15rem;
+    border-radius: var(--borderRadius);
+    margin-bottom: 1rem;
+}
+
+.pigeon h5{
+    margin-bottom: 0;
+    line-height: 1;
+    color: var(--grey-700);
+}
+.pigeon p{
+    margin-bottom: 0;
+    line-height: 1;
+    margin-top: 0.5rem;
+    color: var(--grey-500);
+    letter-spacing: var(--letterSpacing);
+}    
 /* footer */
 .page-footer{
     display: flex;
