--- a/r-simple-starter/css/style.css
+++ b/r-simple-starter/css/style.css
@@ -398,7 +398,7 @@ ul {
 .tags-list a:hover{
     color:  var(--primary-500);
 }
-.pigeon-list{
+.pigeons-list{
     display: grid;
     gap: 2rem 1rem;
     padding-bottom: 3rem;
