--- a/r-simple-starter/css/style.css
+++ b/r-simple-starter/css/style.css
@@ -428,7 +428,7 @@ ul {
     .pigeons-list{
         grid-template-columns: 1fr 1fr;
     }
-    .ricepe-img{
+    .pigeon-img{
         height: 10rem;
     }
 }
